Fix header alignment

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -17,10 +17,10 @@ header {
 	.transition();
 	.text-center;
 	position: relative;
-	padding-top: @line-height-computed*7;
+	padding-top: @line-height-computed*6;
 	padding-bottom: @line-height-computed*3;
 	background: url('../images/windowblur.jpg') center bottom;
-	margin-top: -@line-height-computed*5;
+	margin-top: -@line-height-computed*6;
 	margin-bottom: @line-height-computed*2;	
 	width: 104%;
 	h1 {
@@ -77,7 +77,7 @@ section.content {
 	@media(@medium) {
 		.column(9);
 		&.homepage {
-			margin-top: 245px;
+			margin-top: 225px;
 		}
 	}
 }
